--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
   "version": 2,
-  "name": "music-album",
+  "name": "express-products-vercel",
   "builds": [
-    { "src": "./src/index.ts", "use": "@vercel/node" }
+    {
+      "src": "src/index.ts",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "./src/index.ts" }
+    {
+      "src": "/(.*)",
+      "dest": "src/index.ts"
+    }
   ]
 }
